# potential-octo-funicular

./: .clang-format  CMakeLists.txt  INSTALL.md  README.md  alexandre.sh  run.sh  shell.nix
lib/imgui/: imgui_demo.cpp
lib/implot/: implot_demo.cpp
src/: _main.cpp  fifty  fifty.cpp  main.cpp  test.cpp
src/Core/: CpuManager.cpp  CpuManager.h  CpuParser.cpp  CpuParser.h  Memory.cpp  MemoryManager.cpp  MemoryManager.h  MemoryParser.cpp  MemoryParser.h  ProcessManager.cpp  ProcessManager.h  ProcessParser.cpp  ProcessParser.h  Stat.cpp
src/LRM/: Application.cpp  Application.h  ProcessList.cpp  ProcessList.h
src/Models/: Cpu.h  Mem.h  Memory.h  Process.h
